Add radio-helper class

--- a/resources/sass/field.scss
+++ b/resources/sass/field.scss
@@ -1,1 +1,8 @@
 // Nova Tool CSS
+.radio-helper {
+  display: block;
+  font-style: normal;
+  font-size: 13px;
+  color: #8c8c8c;
+  margin-left: 23px;
+}
