tweaked hint field

--- a/resources/sass/field.scss
+++ b/resources/sass/field.scss
@@ -1,12 +1,1 @@
-// Nova Tool CSS
-.radio-helper {
-  display: block;
-  font-style: normal;
-  font-size: 13px;
-  color: #8c8c8c;
-  margin-left: 23px;
-}
-
-.form-field {
-  margin-left: 23px;
-}
+/* Keeping all CSS scoped to the component so we don't break others work */
